checker framework java 8